tests/bad/missing_line_end.oc
/// fail: Expected Comma or newline

struct Foo {
    a: i32 b: i32
}